Made big chanages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanchenjunga:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
 
 html {
-    @apply sm:bg-gradient-to-b from-blue-600 to-cyan-950 bg-blue-600 sm:pb-10 bg-no-repeat bg-fixed;
+    @apply bg-gray-800;
 }
 
 body {
-    @apply container mx-auto;
-    font-family: 'Pixelify Sans', sans-serif;
+    font-family: 'Kanchenjunga', sans-serif;
 }
 
 h1 {
